manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assettrack
  labels:
    linkerd.io/inject: enabled
